--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@ html {
   background-color: rgba(247, 242, 242, 0.932);
 }
 h1 {
-  position: relative;
+  text-align: center;
+  /* position: relative;
   left: 42rem;
-  margin-bottom: 5rem;
+  margin-bottom: 5rem; */
 }
 
 #score-box {
@@ -35,24 +36,26 @@ h1 {
 
 #start {
   position: relative;
-  left: 46rem;
-  bottom: 3rem;
+  left: 48%;
+  /* bottom: 3rem; */
+
 }
 
 #game {
   display: grid;
-  grid-template-columns: auto auto auto auto auto;
+  grid-template-columns: 20% 20% 20% 20% 20%;
   grid-template-rows: auto;
-  column-gap: 1rem;
+  /* column-gap: 1rem; */
   row-gap: 1rem;
   margin-top: 7rem;
+  margin-left: 7%;
 }
 
 #game div {
   border: 1px solid black;
   border-radius: 10%;
-  width: 60%;
-  height: 200px;
+  width: 40%;
+  height: 175px;
   /* margin: 10px; */
   display: inline-block;
 }
